#
# Copyright (c) 2017      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the libquo project. See the LICENSE file at the
# top-level directory of this distribution.
#

SUBDIRS = \
event-tracing

lib_LTLIBRARIES = \
libquo-atms.la

include_HEADERS = \
quo-atms.h

libquo_atms_la_SOURCES = \
quo-atms-init.c

libquo_atms_la_CFLAGS =
libquo_atms_la_LDFLAGS = -version-info @QUO_LIBVINFO@
libquo_atms_la_LIBADD = \
