#
# Copyright (c)      2019 Triad National Security, LLC
#                         All rights reserved.
#
# This file is part of the libquo project. See the LICENSE file at the
# top-level directory of this distribution.
#

dist_check_SCRIPTS = \
tests-env.sh \
run-c-tests.sh \
run-fortran-tests.sh
