#
# Copyright (c) 2017      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the libquo project. See the LICENSE file at the
# top-level directory of this distribution.
#

SUBDIRS =

lib_LTLIBRARIES = \
libquo-atms-event-tracing-mpi-messaging.la

include_HEADERS =

libquo_atms_la_SOURCES = \
init.c

libquo_atms_la_CFLAGS =
libquo_atms_la_LDFLAGS = -version-info @QUO_LIBVINFO@
libquo_atms_la_LIBADD =
